--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>4.1.3</version>
+            <version>3.3.7-1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
